--- a/lecture15/index.html
+++ b/lecture15/index.html
@@ -1,3 +1,39 @@
 ---
 lecture_num: 15
 ---
+
+<section>
+    <h2>The Coalescent Approximation Revisited</h2>
+
+    * Domain of applicability
+
+</section>
+
+<section>
+    <h2>The linear birth-death-sampling process</h2>
+
+    * Introduction to process (omit rho sampling?)
+</section>
+
+<section>
+    <h2>The conditioned process</h2>
+
+    * Derivation
+</section>
+
+<section>
+    <h2>Comparison with the coalescent</h2>
+
+    * Treatment of exponential process
+</section>
+
+<section>
+    <h2>Non-linear birth-death tree priors</h2>
+
+    * E.g. SIR trees, inference using particle filtering
+</section>
+
+<section>
+    <h2>Summary</h2>
+
+</section>
