Added summary and reading slides to L15.

--- a/lecture15/index.html
+++ b/lecture15/index.html
@@ -152,4 +152,32 @@ lecture_num: 15
 <section>
     <h2>Summary</h2>
 
+    <ul style="margin-top:5%" class="spaced">
+        <li>Birth-death processes (and their corresponding branching processes)
+            can be used to describe the generative process behind tree
+            formation.</li>
+        <li>In certain limits they yield the coalescent distribution for the
+            sampled genealogy.</li>
+        <li>Stadler et al. have shown that they can be used <b>directly</b> and
+            without approximation to derive model-based tree priors that:
+            <ul>
+                <li>properly describe the effects of stochastic fluctuations in
+                    small populations, and </li>
+                <li>explicitly take sampling processes into consideration.</li>
+            </ul>
+        </li>
+        <li>Extension to nonlinear birth-death process descriptions requires
+        numerical methods such as particle filtering or numerical integration
+        of master equations.</li>
+    </ul>
+
+</section>
+
+<section>
+    <h2>Further reading</h2>
+
+    <ul style="margin-top:10%;width:80%" class="spaced">
+        <li><a class="cite" href="http://dx.doi.org/10.1016/j.jtbi.2010.09.010">Stadler T., <i>Sampling through time in birth-death trees</i>,<br>J. Theoretical Biology, 2010</a></li>
+        <li><a class="cite" href="http://dx.doi.org/10.1098/rspb.2015.0420">Stadler T. et al., <i>How well can the exponential-growth coalescent approximate constant-rate birth-death population dynamics?</i>,<br>Proc. R. Soc. B, 2015</a></li>
+    </ul>
 </section>
